# jw_dpdk

drivers/net/: meson.build
drivers/net/i350/: i350_82575.c  i350_82575.h  i350_api.c  i350_api.h  i350_base.c  i350_base.h  i350_defines.h  i350_ethdev.c  i350_ethdev.h  i350_flow.c  i350_hw.h  i350_logs.c  i350_logs.h  i350_mac.c  i350_manage.c  i350_manage.h  i350_mbx.c  i350_mbx.h  i350_nvm.c  i350_osdep.h  i350_pf.c  i350_phy.c  i350_phy.h  i350_regs.h  i350_rxtx.c  i350_vf.h  meson.build
